try to fix differencies on ios

--- a/frontend/src/Components/Pages/HomePage/HomePage.scss
+++ b/frontend/src/Components/Pages/HomePage/HomePage.scss
@@ -28,7 +28,7 @@ $tablet-st: 1.5;
    width: 100%;
    height: 725px;
    margin: 0 42px 0 43px;
-  //  place-content: center;
+   place-content: center;
   
    background-color: $primary-color;
 
